--- a/.github/workflows/master_book-a-room2.yml
+++ b/.github/workflows/master_book-a-room2.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - book-a-room2
+name: Build and deploy Python app to Azure Web App - book-a-room2
 
 on:
   push:
@@ -15,21 +15,23 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Set up Python version
+      uses: actions/setup-python@v1
       with:
-        dotnet-version: '3.1.102'
+        python-version: '3.6'
 
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+    - name: Install Python dependencies
+      run: |
+        python3 -m venv env
+        source env/bin/activate
+        pip install -r requirements.txt
+    - name: Zip the application files
+      run: zip -r myapp.zip .
 
-    - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-    - name: Deploy to Azure Web App
+    - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'book-a-room2'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8c53539512864152a65337f34190fd07 }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_16dd5fb8116d4a3d833676256ef2213c }}
+        package: './myapp.zip'
